# Video-Streamer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/videostreamer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MediaStreamerJNI.cpp
app/src/main/cpp/common/: JNIHelper.cpp  JNIHelper.h  JNILogHelper.h  Sink.h  TimeUtils.cpp  TimeUtils.h
app/src/main/cpp/ffmpeg/: Demuxer.cpp  Demuxer.h  FFmpegHelper.cpp  FFmpegHelper.h  Muxer.cpp  Muxer.h  MuxerBuilder.cpp  MuxerBuilder.h  SampleBuffer.cpp  SampleBuffer.h
app/src/main/cpp/ffmpeg/lib/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/lib/arm64-v8a/pkgconfig/: x264.pc
app/src/main/cpp/ffmpeg/lib/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/lib/armeabi-v7a/pkgconfig/: x264.pc
app/src/main/cpp/ffmpeg/lib/x86/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/lib/x86/pkgconfig/: x264.pc
app/src/main/cpp/ffmpeg/lib/x86_64/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/lib/x86_64/pkgconfig/: x264.pc
app/src/main/cpp/gles/: GLES3Helper.cpp  GLES3Helper.h  NDKHelper.h  RendererES3.cpp  RendererES3.h
app/src/main/cpp/streamer/: AudioStreamer.cpp  AudioStreamer.h  AudioStreamerBuilder.cpp  AudioStreamerBuilder.h  FrameBuffer.cpp  FrameBuffer.h  MediaStreamer.cpp  MediaStreamer.h  MediaStreamerBuilder.cpp  MediaStreamerBuilder.h  VideoStreamer.cpp  VideoStreamer.h  VideoStreamerBuilder.cpp  VideoStreamerBuilder.h
app/src/main/java/com/example/videostreamer/: DisplayTime.kt  GLES3JNILib.kt  GLES3JNIView.kt  GLESActivity.kt  MediaStreamer.kt  MyApplication.kt
app/src/main/res/layout/: activity_gles.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/videostreamer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
